@@ -1,3 +1,5 @@
+- Handles MasterBackendOverride (kaptain-iglu)
+
 v1.11.4
 - Updated language files from Transifex
 - Minor changes to conform with C++11
